--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <form>
           <h1>About us </h1>
         <div class="about">
-  <pre style="text-align: left;">
-   <br>*BEAUTY CARE WITH A PERSONAL TOUCH*</br>
+  <pre style="text-align: left;"
+ <br>*BEAUTY CARE WITH A PERSONAL TOUCH*</br>
     Professional Make-up
     Party Make-up
     Engagement Make-up
