--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="https://api.whatsapp.com/send?phone=919158088588&amp;text=Hi Yogita_MakeupStudio" target="_blank"><div class="link_btn"><i class="fab fa-whatsapp"></i> WhatsApp</div></a>
           <a href="https://goo.gl/maps/voBacCatuEshkhtFA " target="_blank"><div class="link_btn"><i class="fa fa-map-marker"></i> Direction</div></a>
           <a href="Mailto:yogitammahajan@gmail.com" target="_blank"><div class="link_btn"><i class="fa fa-envelope"></i> Mail</div></a>
-<div class="info">
+<div>
 <h3><i class="fa fa-phone">: +919158088588</i></h3>
 <h3><i class="fa fa-envelope"></i>:yogitammahajan@gmail.com</h3>
 <h3><i class="fa fa-map-marker"></i>:Pune_Nashik_Mumbai </h3></div> 
