--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Cysteine_Keratin Treatment Etc.
         
         <div class="ps">
           <ps>
-            <h1>Gallary</h1>
+            <h1>Image Gallary</h1>
             <div class="pic">
               <img class="slide1" src="https://gdurl.com/gxw8"width=55% height=100%>
             <img class="slide1" src="https://gdurl.com/BXzV"width=55% height=100%>
