--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       <title>Yogita_MakeupStudio</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta charset="utf-8" />
-  <meta name="theme-color" content="#fae4e4ce" />
+  <meta name="theme-color" content="#e4066d" />
       <meta name="apple-mobile-web-app-capable" content="yes">
       <!-- Chrome, Firefox OS and Opera -->
-<meta name="theme-color" content="#fae4e4ce">
+<meta name="theme-color" content="#e4066d">
 <!-- Windows Phone -->
-<meta name="msapplication-navbutton-color" content="#fae4e4ce">
+<meta name="msapplication-navbutton-color" content="#e4066d">
 <!-- iOS Safari -->
-<meta name="apple-mobile-web-app-status-bar-style" content="#fae4e4ce">
+<meta name="apple-mobile-web-app-status-bar-style" content="#e4066d">
       <link rel="stylesheet" type="text/css" href="main.css" />
       <link
         rel="stylesheet"
